--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=us-cdbr-iron-east-05.cleardb.net
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=heroku_fc369212882fd0f
-DB_USERNAME=ba229422d1c071
-DB_PASSWORD=7fb0c096
+DB_DATABASE=hmgos_blog
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
